Fix uneven top button and header height

--- a/front_end/assets/css/_base.styl
+++ b/front_end/assets/css/_base.styl
@@ -85,7 +85,7 @@ strong
   &.btn-stretch-row
     width 50%
     float left
-    padding 14.5px 0
+    padding 15.5px 0
 
 .zeroclipboard-is-hover
   background-color #97d978
